toolbox/kf-deployment-export.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "13"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"kf","namespace":"toolbox"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"kf"}},"template":{"metadata":{"labels":{"app":"kf"}},"spec":{"containers":[{"env":[{"name":"DATABASE_URL","value":"postgis://kobo:REDACTED_USE_KUBERNETES_SECRET@postgres.toolbox.svc.cluster.local:5432/kobodb"},{"name":"MONGO_HOST","value":"mongo.toolbox.svc.cluster.local"},{"name":"NGINX_STATIC_DIR","value":"/srv/static_collected [...]
  creationTimestamp: "2026-07-04T18:03:50Z"
  generation: 13
  name: kf
  namespace: toolbox
  resourceVersion: "671788"
  uid: c584880a-6e76-4354-970f-7f4ee2971ce4
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: kf
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-07-06T11:58:09+06:00"
      labels:
        app: kf
    spec:
      containers:
      - env:
        - name: DATABASE_URL
          value: postgis://kobo:REDACTED_USE_KUBERNETES_SECRET@postgres.toolbox.svc.cluster.local:5432/kobodb
        - name: MONGO_DB_URL
          value: mongodb://mongo.toolbox.svc.cluster.local:27017/kobocat
        - name: REDIS_CACHE_URL
          value: redis://redis.toolbox.svc.cluster.local:6379/2
        - name: DJANGO_SETTINGS_MODULE
          value: onadata.settings.prod
        - name: DJANGO_SECRET_KEY
          value: REDACTED_USE_KUBERNETES_SECRET
        - name: PUBLIC_DOMAIN_NAME
          value: shopnoltd.dpdns.org
        - name: KOBOFORM_URL
          value: https://kobo.shopnoltd.dpdns.org
        - name: KOBOCAT_URL
          value: https://kf.shopnoltd.dpdns.org
        - name: USE_X_FORWARDED_HOST
          value: "True"
        - name: PUBLIC_REQUEST_SCHEME
          value: https
        image: ghcr.io/asaduzzamanbheramara-prog/shopnoltd-kobocat:v1
        imagePullPolicy: Always
        name: kf
        ports:
        - containerPort: 8000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /srv/init
          name: kf-init-scripts
        - mountPath: /srv/static_collected
          name: nginx-static
        - mountPath: /srv/src/kobocat/media
          name: kf-media
        - mountPath: /srv/src/kobocat/docker/kobocat.ini
          name: kobocat-ini-override
          subPath: kobocat.ini
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 493
          name: kf-init-scripts
        name: kf-init-scripts
      - emptyDir: {}
        name: nginx-static
      - name: kf-media
        persistentVolumeClaim:
          claimName: kf-media-pvc
      - configMap:
          defaultMode: 420
          name: kf-uwsgi-ini
        name: kobocat-ini-override
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-07-06T04:25:49Z"
    lastUpdateTime: "2026-07-06T04:25:49Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-07-04T18:26:02Z"
    lastUpdateTime: "2026-07-06T06:35:38Z"
    message: ReplicaSet "kf-6f84db75cb" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 13
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
