toolbox/06-kpi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kc
  namespace: toolbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kc
  template:
    metadata:
      labels:
        app: kc
    spec:
      containers:
      - name: kc
        image: ghcr.io/asaduzzamanbheramara-prog/shopnoltd-kpi:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 800m
            memory: 1Gi
          limits:
            cpu: "2"
            memory: 2Gi
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: kc-media
          mountPath: /srv/src/kpi/media
        - name: kf-media
          mountPath: /srv/src/kobocat/media
        - name: kf-init-scripts
          mountPath: /srv/init
        - name: uwsgi-ini-override          # <-- NEW
          mountPath: /srv/src/kpi/docker/uwsgi.ini   # <-- NEW
          subPath: uwsgi.ini                 # <-- NEW
      volumes:
      - name: kc-media
        persistentVolumeClaim:
          claimName: kc-media-pvc
      - name: kf-media
        persistentVolumeClaim:
          claimName: kf-media-pvc
      - name: kf-init-scripts
        configMap:
          name: kf-init-scripts
          defaultMode: 0755
      - name: uwsgi-ini-override             # <-- NEW
        configMap:                            # <-- NEW
          name: kc-uwsgi-ini                  # <-- NEW
---
apiVersion: v1
kind: Service
metadata:
  name: kc
  namespace: toolbox
spec:
  selector:
    app: kc
  ports:
  - name: http
    port: 80
    targetPort: 8000
