toolbox/07-kobocat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kf
  namespace: toolbox
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kf
  template:
    metadata:
      labels:
        app: kf
    spec:
      containers:
      - name: kf
        image: ghcr.io/asaduzzamanbheramara-prog/shopnoltd-kobocat:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: kf-init-scripts
          mountPath: /srv/init
        - name: nginx-static
          mountPath: /srv/static_collected
        - name: kf-media
          mountPath: /srv/src/kobocat/media
        - name: kobocat-ini-override
          mountPath: /srv/src/kobocat/docker/kobocat.ini
          subPath: kobocat.ini
      volumes:
      - name: kf-init-scripts
        configMap:
          name: kf-init-scripts
          defaultMode: 0755
      - name: nginx-static
        emptyDir: {}
      - name: kf-media
        persistentVolumeClaim:
          claimName: kf-media-pvc
      - name: kobocat-ini-override
        configMap:
          name: kf-uwsgi-ini
---
apiVersion: v1
kind: Service
metadata:
  name: kf
  namespace: toolbox
spec:
  selector:
    app: kf
  ports:
  - name: http
    port: 80
    targetPort: 8000
