toolbox/09-services.yaml
apiVersion: v1
kind: Service

metadata:
  name: kc-service
  namespace: toolbox

spec:

  selector:
    app: kc

  ports:

  - name: http
    port: 80
    targetPort: 8000

---

apiVersion: v1
kind: Service

metadata:
  name: kf-service
  namespace: toolbox

spec:

  selector:
    app: kf

  ports:

  - name: http
    port: 80
    targetPort: 8000

---

apiVersion: v1
kind: Service

metadata:
  name: ee-service
  namespace: toolbox

spec:

  selector:
    app: ee

  ports:

  - name: http
    port: 80
    targetPort: 8005
