toolbox/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toolbox-ingress
  namespace: toolbox
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: kobo.shopnoltd.dpdns.org
    http:
      paths:
      - backend:
          service:
            name: kc-service
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: kobo.local
    http:
      paths:
      - backend:
          service:
            name: kc-service
            port:
              number: 80
        path: /kc
        pathType: Prefix
      - backend:
          service:
            name: kf-service
            port:
              number: 80
        path: /kf
        pathType: Prefix
      - backend:
          service:
            name: ee-service
            port:
              number: 80
        path: /ee
        pathType: Prefix
