toolbox/13-ingress-uwsgi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toolbox-ingress-uwsgi
  namespace: toolbox
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "UWSGI"
spec:
  ingressClassName: nginx
  rules:
  - host: kobo.shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kc-service
            port:
              number: 80
  - host: kobo.local
    http:
      paths:
      - path: /kc
        pathType: Prefix
        backend:
          service:
            name: kc-service
            port:
              number: 80
      - path: /kf
        pathType: Prefix
        backend:
          service:
            name: kf-service
            port:
              number: 80
